frame/support/test/tests/construct_runtime_ui/invalid_module_entry.stderr
error: expected one of: `Module`, `Call`, `Storage`, `Event`, `Config`, `Origin`, `Inherent`, `ValidateUnsigned`
  --> $DIR/invalid_module_entry.rs:10:23
   |
10 |         Balance: balances::{Error},
   |                             ^^^^^
